content update and js fixes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ sunday:
     date: 6:00 p.m.
 
 wednesday:
-  - category: Wednesday Activities
-    date: 6:00 a.m.
+  - category: Evening Worship
+    date: 6:00 p.m
 
 ---
 {% include header.html %}
