New Content, Added grid elements.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 title: Home
-section1_header: welcome
-section1_text: Welcome to the ministry of Good Hope Baptist Church! We have a deep desire to care for all people, and grow together in our knowledge of Christ. We have a passion for people of all walks of life, and we want to provide the best opportunity for you to worship and connect with Christ in a real and authentic relationship. We hope to see you very soon!
-section2_image: /images/field.jpg
+home_banner: "/images/joinhands.jpg"
+section1_header: "welcome"
+section1_text: "Welcome to the ministry of Good Hope Baptist Church! We have a deep desire to care for all people, and grow together in our knowledge of Christ. We have a passion for people of all walks of life, and we want to provide the best opportunity for you to worship and connect with Christ in a real and authentic relationship. We hope to see you very soon!"
+section2_image: "/images/field.jpg"
 section2_image_text: "For this is the way God loved the world: He gave his one and only Son, so that everyone who believes in him will not perish but have eternal life."
 section2_image_text_tag: "JOHN 3:16"
 sunday:
