--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ section2_image_text_tag: "JOHN 3:16"
     <div class="container 1">
       <p>{{ page.section1_text }}</p>
       <div class="text-center">
-        <a class="button" href="">Learn More</a>
+        <a class="button" href="/welcome">Learn More</a>
       </div>
     </div>
   </div>
